--- a/Gmt/public/styles/site.scss
+++ b/Gmt/public/styles/site.scss
@@ -89,7 +89,7 @@ li{
 }
 }
 
-.treatment{
+.procedure{
 	margin-left: 15px;
   .border{
     border-right:2px solid #e5e5e5;
@@ -121,7 +121,7 @@ li{
   padding-bottom: 40px;
   margin-left: -40px;
 }
-.treatment-box{
+.procedure-box{
 margin-left: -35px;
 margin-top: 20px;
 margin-bottom:40px;
@@ -148,7 +148,7 @@ h3{
   }
 }
 
-.treat{
+.proc{
 	margin-top: 45px;
 	border-bottom:2px solid #e5e5e5;
 	 padding-bottom: 40px;
@@ -162,7 +162,7 @@ h3{
 		margin-top: -10px;
 }
 }
-.treatment-doc{
+.procedure-doc{
 	margin-top: -30px;
 	p{
 		padding-left: 8px;
@@ -247,7 +247,7 @@ h3{
     background-color:rgb(255,108,111);
     color:white;
     font-size: 20px;border-radius: 6px;
-    
+
 
   }
 }
