--- a/Gmt/templates/views/doctor.hbs
+++ b/Gmt/templates/views/doctor.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-	<div class="row treatment">
+	<div class="row procedure">
 		<div class="col-lg-8 border">
 			<div class="row doc" style="height:350px">
 				<div class="col-lg-4">
@@ -24,31 +24,15 @@
 						{{/each}}
 					</ul>
 				</div> -->
-				<!-- <div id="navbar-example">
+				<div id="navbar-example">
 		<ul class="nav nav-tabs" style="border:none;margin-top:-5px; background-color: rgb(237, 237, 237); width: 788px; height: 70px; margin-left: -65px;padding-left:100px;padding-top:15px;" role="tablist">
 			<li ><a href="#bio">Overview</a></li>
 			<li><a href="#education">Featured Providers</a></li>
 			<li><a href="#awards" style="background-color:rgb(237,237,237);border:none;color:black;">Specialists</a></li>
 		 <li><a href="#reviews">Reviews</a></li>
 		</ul>
-	</div> -->
-	<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Bio</a>
-			<a class="navbar-brand" href="#">eductaion</a>
-			<a class="navbar-brand" href="#">awards</a>
-		  <a class="navbar-brand" href="#">reviews</a>
-    </div>
 	</div>
-</nav>
+
 
 				<h4 id="bio"></h4>
 				{{#each provider}}
