--- a/Gmt/templates/views/provider.hbs
+++ b/Gmt/templates/views/provider.hbs
@@ -10,7 +10,7 @@
 					<div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
 						<h3>{{name}}</h3>
 						<p>
-							<button type="button" class="btn btn-default" onclick="location.href='/user/'">Know More</button>
+							<button type="button" class="btn btn-default" onclick="location.href='/providerInfo/{{key}}'">Know More</button>
 							<!-- <script src="/js/btn.js"></script> -->
 						</p>
 					</div>
