--- a/Gmt/templates/views/providerInfo.hbs
+++ b/Gmt/templates/views/providerInfo.hbs
@@ -5,15 +5,16 @@
 			<div class="scrolls" data-spy="scroll" data-target="#navbar-example" style="margin-top: 4px;margin-left:20px">
 				<div id="navbar-example">
 					<ul class="nav nav-pills nav-justified pills" role="tablist">
-						{{#each doctor_nav}}
-							<li class="active"><a href="#about">{{name}}</a></li>
-						{{/each}}
+						<!-- {{#each provider}} -->
+						<!-- <li class="active"><a href="#about">{{provider}}</a></li> -->
+						<!-- {{/each}} -->
 					</ul>
 				</div>
 				<h4 id="about"></h4>
 				<p>{{{provider.description}}}</p>
+
 				<h4 id="doctors">Doctors</h4>
-				{{#each doctors}}
+				{{#each provider.doctors}}
 					<div class="row proc">
 						<div class="col-lg-2 ">
 							<img src="images/logo.png">
@@ -25,13 +26,13 @@
 						</div>
 						<div class="col-lg-2">
 							<!-- <button type="button" class="bttn ">Verified</button> -->
-								<input type="text" class="form-control" id="txt" placeholder="Verified" >
+							<input type="text" class="form-control" id="txt" placeholder="Verified">
 						</div>
 					</div>
 				{{/each}}
 				<h4 id="procedures">Procedures</h4>
 				<div class="row proc">
-					{{#each doctor_pro}}
+					{{#each procedures}}
 						<div class="col-lg-4">
 							<button type="button" class="btn btn-default">{{name}}</button>
 						</div>
@@ -40,7 +41,7 @@
 			</div>
 		</div>
 		<div class="col-lg-4 name">
-			<h3>{{providers.name}}</h3>
+			<h3>{{provider.name}}</h3>
 			<br>
 			<br>
 			<div class="form">
