--- a/Gmt/templates/views/procedure.hbs
+++ b/Gmt/templates/views/procedure.hbs
@@ -53,6 +53,14 @@
 						</div>
 					</div>
 				{{/each}}
+				<h4 id="procedures">Procedure</h4>
+				<div class="row proc">
+					{{#each procedures}}
+						<div class="col-lg-4">
+							<button type="button" class="btn btn-default">{{name}}</button>
+						</div>
+					{{/each}}
+				</div>
 
 				<!-- <h4 id="procedures" style="margin-left:-32px;border-top:2px solid #e5e5e5;padding-top:20px;">Procedures</h4>
 				{{#each treatments}}
