--- a/Gmt/templates/views/doctor.hbs
+++ b/Gmt/templates/views/doctor.hbs
@@ -19,43 +19,45 @@
 			<div class="scrolls" data-spy="scroll" data-target="#navbar-example" style="margin-top: 4px;margin-left:20px">
 
 
-	<nav class="navbar navbar-default">
-			<ul class="nav navbar-nav">
-			 <li><a href="#bio">Overview</a></li>
-			<li><a href="#education">Education</a></li>
-			<li><a href="#awards">Awards</a></li>
-			<li><a href="#reviews">Reviews</a></li>
-		</ul>
-	</nav>
+				<nav class="navbar navbar-default">
+					<ul class="nav navbar-nav">
+						<li><a href="#bio">Overview</a></li>
+						<li><a href="#education">Education</a></li>
+						<li><a href="#awards">Awards</a></li>
+						<li><a href="#reviews">Reviews</a></li>
+					</ul>
+				</nav>
 
-	<h4 id="providers">Featured Providers</h4>
-	{{#each providers}}
-		<div class="row procedure-box">
-			<div class="col-lg-4">
-				<img src="{{cloudinaryUrl image}}">
-			</div>
-			<div class="col-lg-6">
-				<h3>{{name}}</h3>
-				<a href=""><p>Know More</p></a>
-				<!-- <button type="button" class="bttn" onclick=location.href="/provider_info/">Know More</button> -->
-			</div>
-		</div>
-	{{/each}}
-	<h4 id="procedures">Procedure</h4>
-	<div class="row proc">
-		{{#each procedures}}
-			<div class="col-lg-4">
-				<button type="button" class="btn btn-default">{{name}}</button>
-			</div>
-		{{/each}}
-	</div>
+				<h4 id="providers">Featured Providers</h4>
+				{{#each providers}}
+					<div class="row procedure-box">
+						<div class="col-lg-4">
+							<img src="{{cloudinaryUrl image}}">
+						</div>
+						<div class="col-lg-6">
+							<h3>{{name}}</h3>
+							<a href="">
+								<p>Know More</p>
+							</a>
+							<!-- <button type="button" class="bttn" onclick=location.href="/provider_info/">Know More</button> -->
+						</div>
+					</div>
+				{{/each}}
+				<h4 id="procedures">Procedure</h4>
+				<div class="row proc">
+					{{#each procedures}}
+						<div class="col-lg-4">
+							<button type="button" class="btn btn-default">{{name}}</button>
+						</div>
+					{{/each}}
+				</div>
 
 
-			<h4 id="bio"></h4>
+				<h4 id="bio"></h4>
 				{{#each provider}}
-				<p>
-					{{description}}
-				</p>
+					<p>
+						{{description}}
+					</p>
 				{{/each}}
 				<h4 id="education" style="">Education</h4>
 				<h3 style="margin-left: -30px;font-size:18px;">{{doctor.description}}</h3>
@@ -79,53 +81,36 @@
 			{{/each}}-->
 
 			<div class="form">
-			<form>
-				<div class="form-group nm">
-					<input type="name" class="form-control" id="name" placeholder="Name:" >
-				</div>
-				<div class="form-group">
-					<input type="email" class="form-control" id="email" placeholder="Email:">
-				</div>
-				<div class="form-group">
-					<input type="phone" class="form-control" id="phone" placeholder="Phone(Optional)">
-				</div>
-				<div class="form-group">
-					<select id="sel1" class="form-control" name="trip">
-<!-- <option>Treatment</option> -->
-        {{#each procedures}}
-       <option value="Honeymoon">{{name}}</option>
-<!-- <option value="family">Family</option>
-<option value="friends">Friends</option>
-<option value="adventure">Adventure</option> -->
-        {{/each}}
-        </select>
+				<form class="form-inline" method="post" style="margin-left:25px;">
+					<input type="hidden" name="action" value="enquire">
+					<div class="form-group nm">
+						<input type="text" name="name.full" class="form-control" id="name" placeholder="Name:">
+					</div>
+					<div class="form-group">
+						<input type="email" name="email" class="form-control" id="email" placeholder="Email:">
+					</div>
+					<div class="form-group">
+						<input type="phone" name="phone" class="form-control" id="phone" placeholder="Phone(Optional)">
+					</div>
+					<div class="form-group">
+						<input type="text" name="procedures" class="form-control" id="procedure" placeholder="Procedure">
+						<input type="hidden" id="procedureId" name="procedureId" value="">
+					</div>
+					<div class="form-group">
+						<textarea class="textarea" name="message" rows="5" placeholder="Questions/Comments"></textarea>
+					</div>
+					<br>
+					<input type="submit" value="Consultation" class="button" style="" />
+				</form>
+				{{#if consultationSent}}
+					<br>
+					<h3 style="margin-left: 0px;">Consultation Sent successfully</h3>
+				{{/if}}
 
-					<!-- <div class="dropdown">
-						<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-							Treatment
-							<span class="caret"></span>
-						</button>
-						<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-							{{#each treatments}}
-								<li><a href="#">{{name}}</a></li>
-							{{/each}}
-
-						</ul>
-					</div> -->
-
-				</div>
 				<br>
-				<div class="form-group">
-			  <textarea class="textarea" rows="5" placeholder="Questions/Comments"></textarea>
-				</div>
-			</form>
 
-			<br>
-			<br>
-			<br>
-			<button type="button" class="button">Enquire</button>
+			</div>
 		</div>
-	  </div>
 
 
 	</div>
