--- a/Gmt/templates/views/procedure.hbs
+++ b/Gmt/templates/views/procedure.hbs
@@ -4,13 +4,13 @@
 			<img src="http://placehold.it/450x150">
 			<div class="scrolls" data-spy="scroll" data-target="#navbar-example" style="margin-top:4px;margin-left:20px">
 
-			    <nav class="navbar navbar-default">
-            <ul class="nav navbar-nav">
-						 <li><a href="#overview" >Overview</a></li>
-			 			<li><a href="#providers">Featured Providers</a></li>
-			 			<li><a href="#doctors">Specialists</a></li>
+				<nav class="navbar navbar-default">
+					<ul class="nav navbar-nav">
+						<li><a href="#overview">Overview</a></li>
+						<li><a href="#providers">Featured Providers</a></li>
+						<li><a href="#doctors">Specialists</a></li>
 					</ul>
-			  </nav>
+				</nav>
 
 
 				<h4 id="overview"></h4>
@@ -28,7 +28,9 @@
 						</div>
 						<div class="col-lg-6">
 							<h3>{{name}}</h3>
-							<a href=""><p>Know More</p></a>
+							<a href="">
+								<p>Know More</p>
+							</a>
 							<!-- <button type="button" class="bttn" onclick=location.href="/provider_info/">Know More</button> -->
 						</div>
 					</div>
@@ -56,8 +58,8 @@
 				<h4 id="procedures">Procedure</h4>
 				<div class="row proc">
 					{{#each procedures}}
-						<div class="col-lg-4">
-							<button type="button" class="btn btn-default">{{name}}</button>
+						<div>
+							<label>{{name}}: ₹ {{price}} </label>
 						</div>
 					{{/each}}
 				</div>
@@ -88,13 +90,16 @@
 		<div class="col-lg-4">
 			<ul class="nav nav-stacked tabs">
 
-      {{#each specialities}}
-				{{#if active}}
-		    	<li role="presentation" class="active"><a href="/procedure/{{key}}" style="height: 60px;margin-left:80px;"><img src="/images/{{key}}.jpg" style="width:50px;height:30px;margin-left:-60px;margin-top:0px;">{{name}}</a></li>
-				{{else}}
-					<li role="presentation"><a href="/procedure/{{key}}" style="height:60px;">{{name}}</a></li>
-				{{/if}}
-			{{/each}}
+				{{#each specialities}}
+					{{#if active}}
+						<li role="presentation" class="active">
+							<a href="/procedure/{{key}}" style="height: 60px;margin-left:80px;">
+								<img src="/images/{{key}}.jpg" style="width:50px;height:30px;margin-left:-60px;margin-top:0px;">{{name}}</a>
+						</li>
+					{{else}}
+						<li role="presentation"><a href="/procedure/{{key}}" style="height:60px;">{{name}}</a></li>
+					{{/if}}
+				{{/each}}
 
 			</ul>
 		</div>
