--- a/Gmt/templates/views/contact.hbs
+++ b/Gmt/templates/views/contact.hbs
@@ -21,7 +21,7 @@
 					<label>Phone</label>
 					<input type="text" name="phone" placeholder="(optional)" class="form-control" value="{{formData.phone}}">
 				</div>
-				<div class="form-group {{#if validationErrors.enquiryType}}has-error{{/if}}">
+				<!-- <div class="form-group {{#if validationErrors.enquiryType}}has-error{{/if}}">
 					<label>What are you contacting us about?</label>
 					<select name="enquiryType" class="form-control">
 						<option value="">(select one)</option>
@@ -29,7 +29,7 @@
 						<option value="{{value}}">{{label}}</option>
 						{{/each}}
 					</select>
-				</div>
+				</div> -->
 				<div class="form-group {{#if validationErrors.message}}has-error{{/if}} ">
 					<label>Message</label>
 					<textarea name="message" placeholder="Leave us a message..." rows="4" class="form-control">{{formData.message}}</textarea>
