--- a/Gmt/templates/views/doctor.hbs
+++ b/Gmt/templates/views/doctor.hbs
@@ -93,7 +93,7 @@
 						<input type="phone" name="phone" class="form-control" id="phone" placeholder="Phone(Optional)">
 					</div>
 					<div class="form-group">
-						<input type="text" name="procedures" class="form-control" id="procedure" placeholder="Procedure">
+						<input type="text" name="procedure" class="form-control" id="procedure" placeholder="Procedure">
 						<input type="hidden" id="procedureId" name="procedureId" value="">
 					</div>
 					<div class="form-group">
